--- a/EventBuddy/Info.plist
+++ b/EventBuddy/Info.plist
@@ -4,5 +4,7 @@
 <dict>
 	<key>NSCalendarsWriteOnlyAccessUsageDescription</key>
 	<string>EventBuddy would like to add events to your Calendar</string>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 </dict>
 </plist>
