Refactor EventSyncService to sync events from a remote JSON URL, add connection testing functionality, and implement fallback loading from local bundle. Update Info.plist for App Transport Security compliance and clarify comments in ContentView.swift.

--- a/EventBuddy/Info.plist
+++ b/EventBuddy/Info.plist
@@ -6,5 +6,22 @@
 	<string>EventBuddy would like to add events to your Calendar</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<false/>
+		<key>NSExceptionDomains</key>
+		<dict>
+			<key>eventbuddy.buildwithharry.com</key>
+			<dict>
+				<key>NSExceptionRequiresForwardSecrecy</key>
+				<false/>
+				<key>NSExceptionMinimumTLSVersion</key>
+				<string>TLSv1.2</string>
+				<key>NSIncludesSubdomains</key>
+				<true/>
+			</dict>
+		</dict>
+	</dict>
 </dict>
 </plist>
