Implement deep linking and navigation enhancements in EventBuddy
- Introduced a NavigationCoordinator to manage tab selection and deep linking.
- Updated ContentView to handle deep links and navigate to specific events, profiles, or tabs.
- Enhanced EventListView with deep link handling and navigation destination for events.
- Added support for refreshing widget timelines when the app enters the foreground.
- Updated Info.plist to include URL scheme for deep linking functionality.

--- a/EventBuddy/Info.plist
+++ b/EventBuddy/Info.plist
@@ -4,6 +4,17 @@
 <dict>
 	<key>NSCalendarsWriteOnlyAccessUsageDescription</key>
 	<string>EventBuddy would like to add events to your Calendar</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>com.buildwithharry.EventBuddy</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>eventbuddy</string>
+			</array>
+		</dict>
+	</array>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
 	<key>NSAppTransportSecurity</key>
